--- a/app/css/yii-social.css
+++ b/app/css/yii-social.css
@@ -1,12 +1,19 @@
 .bs-callout {
     padding: 20px;
-    margin: 20px 0;
+    margin: 0px 0;
     border-left: 1px solid #eee;
     border-left-width: 5px;
     border-radius: 3px;
 }
 
-.bs-callout h4 {
+.bs-callout.top-20 {
+  margin-top: 20px;
+}
+
+.bs-callout h4,
+.bs-callout h3,
+.bs-callout h2,
+.bs-callout h1 {
     margin-top: 0;
     margin-bottom: 5px;
 }
